syntax = "proto3";

package mimirfrontend;

option go_package = "pkg/mimirfrontend";


import "github.com/grafana/dskit/httpgrpc/httpgrpc.proto";
import "github.com/grafana/mimir/pkg/querier/stats/stats.proto";

service Frontend {
  rpc Query(QueryResultRequest) returns (QueryResultResponse) {}
}

message QueryResultRequest {
  uint64 queryID = 1;
  httpgrpc.HTTPResponse httpResponse = 2;
  stats.Stats stats = 3;
}

message QueryResultResponse { }
